[package]
name = "channel_path"
version = "0.1.0"
authors = ["Peter-Noble <peter@noblesque.org.uk>", "John Roper <john@jmroper.com>"]

[lib]
name = "channel_path"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "*"
features = ["extension-module"]

[dependencies]
spade = "*"
cgmath = "*"
lazy_static = "*"
assert_approx_eq = "*"