[package]
name = "channel_world"
version = "0.1.0"
authors = ["Peter-Noble <peter@noblesque.org.uk>", "John Roper <john@jmroper.com>"]

[lib]
name = "channel_world"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "*"
features = ["extension-module"]

[dependencies]
nalgebra = "*"
ncollide = "*"
lazy_static = "*"
